--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: hsl(142, 85%, 95%);
+}
+
+.stopwatch{
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 3px solid rgb(114, 114, 114);
+  border-radius: 50px;
+  background-color: hsl(130, 85%, 92%);
+  padding: 30px;
+}
+
+.display{
+  font-size: 5rem;
+  font-family: monospace;
+  font-weight: bold;
+  color: hsl(0, 0%, 30%);
+  text-shadow: 2px 2px 2px hsla(0, 0%, 0%, 0.75);
+  margin-bottom: 25px;
+}
+
+.controls button{
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 10px 20px;
+  margin: 5px;
+  min-width: 125px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
   color: white;
+  transition: background-color 0.5s ease;
 }
 
-.App-link {
-  color: #61dafb;
+.start-button{
+  background-color: hsl(115, 100%, 40%);
+}
+.start-button:hover{
+  background-color: hsl(115, 100%, 35%);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.stop-button{
+  background-color: hsl(10, 90%, 50%);
+}
+.stop-button:hover{
+  background-color: hsl(10, 90%, 45%);
+}
+
+.reset-button{
+  background-color: hsl(205, 90%, 60%);
+}
+.reset-button:hover{
+  background-color: hsl(205, 90%, 55%);
 }
